# glider-api

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  conf.py  index.rst  intro.md  pyproject.toml  test.py
examples/python/: demo.py
src/: lib.rs
