[package]
name = "glider-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glider_api"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
crc16 = "0.4.0"
hidapi = "2.6.3"
pyo3 = "0.24.0"

[build-dependencies]
cbindgen = "0.24.3"
