[build-system]
requires = ["maturin>=1.8,<2.0", "myst-parser>=4.0.1", "Sphinx>=8.2.3"]
build-backend = "maturin"

[project]
name = "glider-api"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]